--- a/index.html
+++ b/index.html
@@ -6,14 +6,78 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Размерная страничка</title>
         <link rel="stylesheet" type="text/css" href="style/default.css">
+        <link rel="stylesheet" type="text/css" href="style/brands.css">
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
     </head>
     <body>
-        <header id="header">
-
-        </header>
-        <main class="">
-            <section class="">
-            </section>
-        </main>
+        <div class="wrapper">
+            <header id="header">
+                <div class="header__title">РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</div>
+            </header>
+            <main>
+                <section>
+                    <div class="brands__section swiper__wrapper">
+                        <div class="brands__section--cont swiper__slide">
+                            <img class="brands__section--logo"
+                                src="images/Lenovo.webp">
+                            <img class="brands__section--go"
+                                src="images/go.webp">
+                        </div>
+                        <div class="brands__section--cont swiper__slide">
+                            <img class="brands__section--logo"
+                                src="images/Samsung.webp">
+                            <img class="brands__section--go"
+                                src="images/go.webp">
+                        </div>
+                        <div class="brands__section--cont swiper__slide">
+                            <img class="brands__section--logo"
+                                src="images/Apple.webp">
+                            <img class="brands__section--go"
+                                src="images/go.webp">
+                        </div>
+                        <div class="brands__section--cont swiper__slide">
+                            <img class="brands__section--logo"
+                                src="images/View.webp">
+                            <img class="brands__section--go"
+                                src="images/go.webp">
+                        </div>
+                        <div class="brands__section--cont swiper__slide">
+                            <img class="brands__section--logo"
+                                src="images/Bosch.webp">
+                            <img class="brands__section--go"
+                                src="images/go.webp">
+                        </div>
+                        <div class="brands__section--cont swiper__slide">
+                            <img class="brands__section--logo"
+                                src="images/Hp.webp">
+                            <img class="brands__section--go"
+                                src="images/go.webp">
+                        </div>
+                        <div class="brands__section--cont swiper__slide">
+                            <img class="brands__section--logo"
+                                src="images/Acer.webp">
+                            <img class="brands__section--go"
+                                src="images/go.webp">
+                        </div>
+                        <div class="brands__section--cont swiper__slide">
+                            <img class="brands__section--logo"
+                                src="images/Sony.webp">
+                            <img class="brands__section--go"
+                                src="images/go.webp">
+                        </div>
+                        <button id="showMoreButton"
+                            class="brands__section--show">
+                            <img class="brands__section--showimg"
+                                src="images/expand.webp">
+                            <a>Показать все</a>
+                        </button>
+                    </div>
+                </section>
+            </main>
+        </div>
+        <script src="js/Show_all.js"></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     </body>
 </html>
