--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <title>Размерная страничка</title>
         <link rel="stylesheet" type="text/css" href="style/default.css">
         <link rel="stylesheet" type="text/css" href="style/brands.css">
-        <link rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
+        <link rel="stylesheet" type="text/css" href="style/brands-mini.css">
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     </head>
     <body>
         <div class="wrapper">
@@ -17,67 +19,143 @@
             </header>
             <main>
                 <section>
-                    <div class="brands__section swiper__wrapper">
-                        <div class="brands__section--cont swiper__slide">
+                    <div class="brands__mini">
+                        <div class="swiper">
+                            <div class="brands__mini-section swiper-wrapper">
+                                <div class="brands__mini-cont swiper-slide">
+                                    <img class="brands__mini-logo"
+                                        src="images/Lenovo.webp">
+                                    <img class="brands__mini-go"
+                                        src="images/go.webp">
+                                </div>
+                                <div class="brands__mini-cont swiper-slide">
+                                    <img class="brands__mini-logo"
+                                        src="images/Samsung.webp">
+                                    <img class="brands__mini-go"
+                                        src="images/go.webp">
+                                </div>
+                                <div class="brands__mini-cont swiper-slide">
+                                    <img class="brands__mini-logo"
+                                        src="images/Apple.webp">
+                                    <img class="brands__mini-go"
+                                        src="images/go.webp">
+                                </div>
+                                <div class="brands__mini-cont swiper-slide">
+                                    <img class="brands__mini-logo"
+                                        src="images/View.webp">
+                                    <img class="brands__mini-go"
+                                        src="images/go.webp">
+                                </div>
+                                <div class="brands__mini-cont swiper-slide">
+                                    <img class="brands__mini-logo"
+                                        src="images/Bosch.webp">
+                                    <img class="brands__mini-go"
+                                        src="images/go.webp">
+                                </div>
+                                <div class="brands__mini-cont swiper-slide">
+                                    <img class="brands__mini-logo"
+                                        src="images/Hp.webp">
+                                    <img class="brands__mini-go"
+                                        src="images/go.webp">
+                                </div>
+                                <div class="brands__mini-cont swiper-slide">
+                                    <img class="brands__mini-logo"
+                                        src="images/Acer.webp">
+                                    <img class="brands__mini-go"
+                                        src="images/go.webp">
+                                </div>
+                                <div class="brands__mini-cont swiper-slide">
+                                    <img class="brands__mini-logo"
+                                        src="images/Sony.webp">
+                                    <img class="brands__mini-go"
+                                        src="images/go.webp">
+                                </div>
+                            </div>
+                            <!-- If we need pagination -->
+                            <div class="swiper-pagination"></div>
+                        </div>
+                    </div>
+                    <div class="brands__section">
+                        <div class="brands__section--cont">
                             <img class="brands__section--logo"
                                 src="images/Lenovo.webp">
                             <img class="brands__section--go"
                                 src="images/go.webp">
                         </div>
-                        <div class="brands__section--cont swiper__slide">
+                        <div class="brands__section--cont">
                             <img class="brands__section--logo"
                                 src="images/Samsung.webp">
                             <img class="brands__section--go"
                                 src="images/go.webp">
                         </div>
-                        <div class="brands__section--cont swiper__slide">
+                        <div class="brands__section--cont">
                             <img class="brands__section--logo"
                                 src="images/Apple.webp">
                             <img class="brands__section--go"
                                 src="images/go.webp">
                         </div>
-                        <div class="brands__section--cont swiper__slide">
+                        <div class="brands__section--cont">
                             <img class="brands__section--logo"
                                 src="images/View.webp">
                             <img class="brands__section--go"
                                 src="images/go.webp">
                         </div>
-                        <div class="brands__section--cont swiper__slide">
+                        <div class="brands__section--cont">
                             <img class="brands__section--logo"
                                 src="images/Bosch.webp">
                             <img class="brands__section--go"
                                 src="images/go.webp">
                         </div>
-                        <div class="brands__section--cont swiper__slide">
+                        <div class="brands__section--cont">
                             <img class="brands__section--logo"
                                 src="images/Hp.webp">
                             <img class="brands__section--go"
                                 src="images/go.webp">
                         </div>
-                        <div class="brands__section--cont swiper__slide">
+                        <div class="brands__section--cont">
                             <img class="brands__section--logo"
                                 src="images/Acer.webp">
                             <img class="brands__section--go"
                                 src="images/go.webp">
                         </div>
-                        <div class="brands__section--cont swiper__slide">
+                        <div class="brands__section--cont">
                             <img class="brands__section--logo"
                                 src="images/Sony.webp">
                             <img class="brands__section--go"
                                 src="images/go.webp">
                         </div>
-                        <button id="showMoreButton"
-                            class="brands__section--show">
-                            <img class="brands__section--showimg"
-                                src="images/expand.webp">
-                            <a>Показать все</a>
-                        </button>
+                        <div id="element1"
+                            class="brands__section--cont container">
+                            <img class="brands__section--logo"
+                                src="images/Lenovo.webp">
+                            <img class="brands__section--go"
+                                src="images/go.webp">
+                        </div>
+                        <div id="element2"
+                            class="brands__section--cont container">
+                            <img class="brands__section--logo"
+                                src="images/Samsung.webp">
+                            <img class="brands__section--go"
+                                src="images/go.webp">
+                        </div>
+                        <div id="element3"
+                            class="brands__section--cont container">
+                            <img class="brands__section--logo"
+                                src="images/Apple.webp">
+                            <img class="brands__section--go"
+                                src="images/go.webp">
+                        </div>
                     </div>
+                    <button id="showMoreButton"
+                        class="brands__section--show" onclick="showMore()">
+                        <img id="image" class="brands__section--showimg"
+                            src="images/expand.webp">
+                        <a id="text">Показать все</a>
+                    </button>
                 </section>
             </main>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
         <script src="js/Show_all.js"></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     </body>
 </html>
