--- a/index.html
+++ b/index.html
@@ -75,82 +75,82 @@
                             <div class="swiper-pagination"></div>
                         </div>
                     </div>
-                    <div class="brands__section">
-                        <div class="brands__section--cont">
-                            <img class="brands__section--logo"
-                                src="images/Lenovo.webp">
-                            <img class="brands__section--go"
-                                src="images/go.webp">
+                    <div class="brands__container">
+                        <div class="brands__section">
+                            <div class="brands__section--cont">
+                                <img class="brands__section--logo"
+                                    src="images/Lenovo.webp">
+                                <img class="brands__section--go"
+                                    src="images/go.webp">
+                            </div>
+                            <div class="brands__section--cont">
+                                <img class="brands__section--logo"
+                                    src="images/Samsung.webp">
+                                <img class="brands__section--go"
+                                    src="images/go.webp">
+                            </div>
+                            <div class="brands__section--cont">
+                                <img class="brands__section--logo"
+                                    src="images/Apple.webp">
+                                <img class="brands__section--go"
+                                    src="images/go.webp">
+                            </div>
+                            <div class="brands__section--cont">
+                                <img class="brands__section--logo"
+                                    src="images/View.webp">
+                                <img class="brands__section--go"
+                                    src="images/go.webp">
+                            </div>
+                            <div class="brands__section--cont">
+                                <img class="brands__section--logo"
+                                    src="images/Bosch.webp">
+                                <img class="brands__section--go"
+                                    src="images/go.webp">
+                            </div>
+                            <div class="brands__section--cont">
+                                <img class="brands__section--logo"
+                                    src="images/Hp.webp">
+                                <img class="brands__section--go"
+                                    src="images/go.webp">
+                            </div>
+                            <div class="brands__section--cont">
+                                <img class="brands__section--logo"
+                                    src="images/Acer.webp">
+                                <img class="brands__section--go"
+                                    src="images/go.webp">
+                            </div>
+                            <div class="brands__section--cont">
+                                <img class="brands__section--logo"
+                                    src="images/Sony.webp">
+                                <img class="brands__section--go"
+                                    src="images/go.webp">
+                            </div>
                         </div>
-                        <div class="brands__section--cont">
-                            <img class="brands__section--logo"
-                                src="images/Samsung.webp">
-                            <img class="brands__section--go"
-                                src="images/go.webp">
-                        </div>
-                        <div class="brands__section--cont">
-                            <img class="brands__section--logo"
-                                src="images/Apple.webp">
-                            <img class="brands__section--go"
-                                src="images/go.webp">
-                        </div>
-                        <div class="brands__section--cont">
-                            <img class="brands__section--logo"
-                                src="images/View.webp">
-                            <img class="brands__section--go"
-                                src="images/go.webp">
-                        </div>
-                        <div class="brands__section--cont">
-                            <img class="brands__section--logo"
-                                src="images/Bosch.webp">
-                            <img class="brands__section--go"
-                                src="images/go.webp">
-                        </div>
-                        <div class="brands__section--cont">
-                            <img class="brands__section--logo"
-                                src="images/Hp.webp">
-                            <img class="brands__section--go"
-                                src="images/go.webp">
-                        </div>
-                        <div class="brands__section--cont">
-                            <img class="brands__section--logo"
-                                src="images/Acer.webp">
-                            <img class="brands__section--go"
-                                src="images/go.webp">
-                        </div>
-                        <div class="brands__section--cont">
-                            <img class="brands__section--logo"
-                                src="images/Sony.webp">
-                            <img class="brands__section--go"
-                                src="images/go.webp">
-                        </div>
-                        <div id="element1"
-                            class="brands__section--cont container">
-                            <img class="brands__section--logo"
-                                src="images/Lenovo.webp">
-                            <img class="brands__section--go"
-                                src="images/go.webp">
-                        </div>
-                        <div id="element2"
-                            class="brands__section--cont container">
-                            <img class="brands__section--logo"
-                                src="images/Samsung.webp">
-                            <img class="brands__section--go"
-                                src="images/go.webp">
-                        </div>
-                        <div id="element3"
-                            class="brands__section--cont container">
-                            <img class="brands__section--logo"
-                                src="images/Apple.webp">
-                            <img class="brands__section--go"
-                                src="images/go.webp">
+                        <div class="container">
+                            <div class="brands__section--cont">
+                                <img class="brands__section--logo"
+                                    src="images/Lenovo.webp">
+                                <img class="brands__section--go"
+                                    src="images/go.webp">
+                            </div>
+                            <div class="brands__section--cont">
+                                <img class="brands__section--logo"
+                                    src="images/Samsung.webp">
+                                <img class="brands__section--go"
+                                    src="images/go.webp">
+                            </div>
+                            <div class="brands__section--cont">
+                                <img class="brands__section--logo"
+                                    src="images/Apple.webp">
+                                <img class="brands__section--go"
+                                    src="images/go.webp">
+                            </div>
                         </div>
                     </div>
-                    <button id="showMoreButton"
-                        class="brands__section--show" onclick="showMore()">
-                        <img id="image" class="brands__section--showimg"
+                    <button class="button" onclick="showMore()">
+                        <img class="buttonimg"
                             src="images/expand.webp">
-                        <a id="text">Показать все</a>
+                        <a class="buttontext">Показать все</a>
                     </button>
                 </section>
             </main>
